# AdversarialTexture

./: .gitignore  LICENSE  README.md
data/: README.md
data/ObjectScan_video/: chairlist.txt
data/scan/: scanlist.txt
data/shape/: shapelist.txt
src/: config.py  visualize.py
src/preprocessing/: README.md  loader.py  painter.py  rasterizer.py  render_scan.py  run.sh
src/preprocessing/CudaRender/: buffer.cpp  buffer.hpp  compile.sh  example.py  main.cpp  mesh.hpp  objloader.py  render.cu  render.hpp  render.py
src/preprocessing/Rasterizer/: CMakeLists.txt  compile.sh  paint.cpp  parser.cpp  rasterizer.cpp
src/textureoptim/: dataset.py  gen_script.py  model.py  optim.py
